# placementTraining

./: aptitude_quant.md  day12_list_of_objects.py  day15_web_scraping.py  day1_char_count.py  day2_count_single_occurance.py  day2_palindrome.py  day2_repeat_chars.py  day2_reverse_halves.py  day3_greedy_chocolate_edges.py  day3_pairs_of_two_lists.py  day3_reverse_each_word.py  day3_reverse_no_inbuilt.py  day3_run_length_decoding.py  day3_run_length_encoding.py  day4_josephus_brute_force.py  day4_max_product.py  day4_print_rotations.py  day5_row_min_col_max.py  day6_keyword_args_maximum.py  day6_reverse_number_without_string.py  day7_file_handling_debt_files.py  day7_filter_prime_numbers.py  main.py  pyproject.toml  readme.md
